@@ -6,6 +6,7 @@ uoproxy (0.3.1) unstable; urgency=low
   * walk: take position from walk_cancel packet
   * walk: resync if walk packets are out of sync
   * walk: don't clear queue when client disconnects
+  * walk: accept out-of-sync "cancel" packets
   * attach: ignore undefined bytes in username/password
 
  --
